<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    tools:context=".RestaurantInfoActivity">

    <TextView
        android:id="@+id/restaurantStatus_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="12dp"
        android:height="72.8px"
        android:background="@drawable/open_tag"
        android:gravity="center"
        android:paddingLeft="20px"
        android:paddingRight="20px"
        android:text="Open"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="371dp"
            android:layout_height="280dp"
            android:background="@drawable/restaurant_info_background"
            android:orientation="vertical"
            android:outlineProvider="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.116">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/restaurantName_info"
                    android:layout_width="217dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50px"
                    android:layout_marginTop="30px"
                    android:text="Tim Hortons"
                    android:textSize="50px" />

                <TextView
                    android:id="@+id/restaurantRating_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="160px"
                    android:layout_marginTop="30px"
                    android:text="3.8 Stars"
                    android:textSize="12dp"/>

            </LinearLayout>

            <TextView
                android:id="@+id/restaurantAddress_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50px"
                android:textSize="12dp"
                android:text="6525 Oak St, Vancouver, BC V6P 3Z3" />

            <TextView
                android:id="@+id/restaurantNumber_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50px"
                android:textSize="12dp"
                android:text="(604) 875-2638" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Hours"
                android:textSize="12dp"
                android:textAlignment="center" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:textSize="12dp"
                    android:text="Monday"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/Monday_Hours"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:textSize="12dp"
                    android:text="Monday Hours"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:text="Tuesday"
                    android:textSize="12dp"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/Tuesday_Hours"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="Tuesday Hours"
                    android:textSize="12dp"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:text="Wednesday"
                    android:textSize="12dp"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/Wednesday_Hours"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="Wednesday Hours"
                    android:textSize="12dp"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:text="Thursday"
                    android:textSize="12dp"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/Thursday_Hours"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="Thursday Hours"
                    android:textSize="12dp"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:text="Friday"
                    android:textSize="12dp"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/Friday_Hours"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="Friday Hours"
                    android:textSize="12dp"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:text="Saturday"
                    android:textSize="12dp"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/Saturday_Hours"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="Saturday Hours"
                    android:textSize="12dp"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:text="Sunday"
                    android:textSize="12dp"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/Sunday_Hours"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="Sunday Hours"
                    android:textSize="12dp"
                    android:textAlignment="center" />
            </LinearLayout>

        </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="372dp"
        android:layout_height="481dp"
        android:background="@drawable/review_background"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.36">

        <TextView
            android:id="@+id/Review_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50px"
            android:layout_marginTop="30px"
            android:text="Reviews"
            android:textSize="50px" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/review_list"
            android:layout_width="match_parent"
            android:layout_height="255dp"
            android:layout_gravity="center" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#EDF4F6">

            <EditText

                android:id="@+id/reviewTextBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="24dp"
                android:layout_marginTop="63dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="7dp"
                android:layout_toStartOf="@+id/reviewSendButton"
                android:background="@color/inner_boxes"
                android:inputType="textMultiLine" />

            <Button
                android:id="@+id/reviewSendButton"
                android:layout_width="60dp"
                android:layout_height="38dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="57dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="-30dp"
                android:background="@drawable/create_foodo_list_popup_button_background"
                android:elevation="0dp"
                android:text="Send" />

            <Spinner
                android:id="@+id/choose_rating_spinner"
                android:layout_width="107dp"
                android:layout_height="36dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="108dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="156dp"
                android:layout_marginBottom="57dp"
                android:spinnerMode="dropdown" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="107dp" />


        </RelativeLayout>

    </LinearLayout>

    <Button
        android:id="@+id/add_restaurant_to_list_button"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:layout_gravity="right"
        android:background="@drawable/add_restaurant_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.904"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="255dp"
        app:layout_constraintVertical_bias="0.018" />

</androidx.constraintlayout.widget.ConstraintLayout>