...
        before to prevent intersections between the Card content and rounded corners.
        card use compact padding will add padding in API v21+ as well to have the same
        measurements with previous versions.
    -->

    <RelativeLayout
        android:id="@+id/restaurant_card_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
                android:gravity="center" />

        </LinearLayout>

        <!--Text View to display Course Name-->
        <TextView
            android:id="@+id/restaurantName"
            android:layout_width="247dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/restaurant_name"
            android:textColor="@color/black"
...
