...
    <string name="restaurant_name">Tim Hortons</string>
    <string name="restaurant_address">6525 Oak St, Vancouver, BC V6P 3Z3</string>
    <string name="restaurant_rating">5 stars</string>
    <string name="search_button">Search Button</string>
    <string name="search_hint">Search Restaurants</string>
    <string name="map_button">Map Button</string>
    <string name="search_title">Search</string>
    <string name="add_button">Add Foodo List Button</string>
    <string name="create_foodo_list_submit_button">Create Foodo List</string>
    <string name="create_foodo_list_hint">Enter Foodo List Name</string>
    <string-array name="rating_options">
        <item>1</item>
        <item>2</item>
...
